# pico-apps-github

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
assignments/: CMakeLists.txt
assignments/assign01/: CMakeLists.txt  assign01.S  assign01.c
examples/: CMakeLists.txt
labs/: CMakeLists.txt
labs/lab01/: CMakeLists.txt  diagram.json  lab01.c  lab01.cpp  lab01_multicore.cpp  lab01_multithreaded.cpp
labs/lab02/: CMakeLists.txt  lab02.c
labs/lab03/: lab03.S
labs/lab05/: lab05.S
labs/lab07/: CMakeLists.txt  lab07.c
pico-cmake-cpp-template/: CMakeLists.txt  CMakePresets.json  pico-cmake-cpp-template.cpp  pico-cmake-cpp-template.h
